--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
        </div>
       </div>
     
-      <script src="src/index.js"></script>
+      <script src="/index.js"></script>
     <footer class="footer" id="footer"></footer>
 </body>
 </html>
